--- a/V1.html
+++ b/V1.html
@@ -9,20 +9,6 @@
 
 <body>
 
-    <div class="header">
-      <!--h1><a class="header-link" href="V1.html">Ami Gianchandani</h1>-->
-      <a class="header-link" href="V1.html"><img src="Images/header.png" height="100%"/></a>
-    </div>
-
-    <div class="navbar">
-      <a href="golf.html">Golf</a>
-      <a href="yale.html">Yale</a>
-      <a href="pingry.html">Pingry</a>
-      <a href="about.html">About</a>
-    </div>
-
-
-
     <div class="row">
       <div class="side">
           <h2>
@@ -41,6 +27,7 @@
       <p>Footer</p>
     </div>
 
+<script src="script.js"></script>
 
 </body>
 </html>
