--- a/pingry.html
+++ b/pingry.html
@@ -8,16 +8,6 @@
 </head>
 
 <body>
-    <div class="header">
-      <!--h1><a class="header-link" href="V1.html">Ami Gianchandani</h1>-->
-      <a class="header-link" href="V1.html"><img src="Images/header.png" height="100%"/></a>
-    </div>
-
-    <div class="navbar">
-      <a href="golf.html">Golf</a>
-      <a href="yale.html">Yale</a>
-      <a class ="section" href="pingry.html">Pingry</a>
-      <a href="about.html">About</a>
-    </div>
+    <script src="script.js"></script>
 
 </body>
