--- a/yale.html
+++ b/yale.html
@@ -8,18 +8,6 @@
 </head>
 
 <body>
-    <div class="header">
-      <!--h1><a class="header-link" href="V1.html">Ami Gianchandani</h1>-->
-      <a class="header-link" href="V1.html"><img src="Images/header.png" height="100%"/></a>
-    </div>
-
-    <div class="navbar">
-      <a href="golf.html">Golf</a>
-      <a class ="section" href="yale.html">Yale</a>
-      <a href="pingry.html">Pingry</a>
-      <a href="about.html">About</a>
-    </div>
-
     <div class="row">
       <div class="side">
           <h2>
@@ -71,6 +59,7 @@
       <div class="main"><h2>Other stuff</h2></div>
     </div>
 
+    <script src="script.js"></script>
 
 
 </body>
