Started working on the js files and faviconand newsfeed

--- a/V1.html
+++ b/V1.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="style.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel='icon' href='Images/favicon.ico' type='image/x-icon'/ >
 </head>
 
 <body>
@@ -20,7 +21,16 @@
           <img src="https://yalebulldogs.com/images/2019/10/22/Gianchandani.jpg" width="70%"/>
 
       </div>
-      <div class="main"><h2>Recent News</h2></div>
+      <div class="main"><h2>Recent News</h2>
+          <div class="card">
+              <img src="Images/default.jpg" alt="News Picture" style="width:100%">
+              <div class="container">
+                <h4><b>Article Title</b></h4>
+              </div>
+          </div>
+
+
+      </div>
     </div>
 
     <div class="footer">
