Lots of updates

--- a/golf.html
+++ b/golf.html
@@ -9,6 +9,45 @@
 </head>
 
 <body>
-    <script src="script.js"></script>
 
+    <h1>Win scores</h1>
+
+    <table>
+      <tr>
+        <th width=100px>Tournamenet Name</th>
+        <th>Course Name</th>
+        <th>Yards</th>
+        <th>Tour</th>
+        <th>Date</th>
+        <th>Round 1</th>
+        <th>Round 2</th>
+        <th>Round 3</th>
+        <th>Total</th>
+      </tr>
+      <tr>
+        <td>Tournamenet Name 1</td>
+        <td>Course Name 1</td>
+        <td>Yards 1</td>
+        <td>Tour 1</td>
+        <td>Date</td>
+        <td>Round 11</td>
+        <td>Round 12</td>
+        <td>Round 13</td>
+        <td>Total 1</td>
+      </tr>
+      <tr>
+        <td>Tournamenet Name 2</td>
+        <td>Course Name 2</td>
+        <td>Yards 2</td>
+        <td>Tour 2</td>
+        <td>Date</td>
+        <td>Round 21</td>
+        <td>Round 22</td>
+        <td>Round 23</td>
+        <td>Total 2</td>
+      </tr>
+    </table>
+
+    <script src="script.js"></script>
+    <script src="golfresults.js"></script>
 </body>
