--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
               Me
           </h2>
           <p>
+              Yale '22
+          </p>
+          <p>
+              Pingry '18
+          </p>
+
+          <p>
               Instagram: @ami9g
           </p>
           <img src="https://yalebulldogs.com/images/2019/10/22/Gianchandani.jpg" width="70%"/>
 
       </div>
-      <div class="main"><h2>Recent News</h2>
-          <div class="card">
-              <img src="Images/default.jpg" alt="News Picture" style="width:100%">
-              <div class="container">
-                <h4><b>Article Title</b></h4>
-              </div>
-          </div>
-
-
+      <div id="mainoo" class="main">
+          <h2>Recent News</h2>
+          <img class="loading-image" src="Images/loading.gif" alt = "Loading"/>
       </div>
     </div>
 
@@ -38,6 +39,7 @@
     </div>
 
 <script src="script.js"></script>
+<script src="news.js"></script>
 
 </body>
 </html>
