--- a/pingry.html
+++ b/pingry.html
@@ -9,6 +9,68 @@
 </head>
 
 <body>
+
+    <div class="row">
+        <div class="side">
+
+            <h2>Academic Awards</h2>
+            <li>Cum Laude Society</li>
+            <li>Science Book Award</li>
+            <li>Advanced Math Prize</li>
+            <li>AP Scholar with Honor</li>
+
+            <h2>Athletic Awards</h2>
+            <li>Somerset County Scholar Athlete</li>
+            <li>Women's Sports Award</li>
+            <li>NJ State Individual Champion 2017</li>
+            <li>First Team All State 2015-2018</li>
+            <li>NJ State Team Champions 2018</li>
+            <li>Team MVP 2015-2018</li>
+
+
+            <h2> AP Classes </h2>
+            <li>Computer Science</li>
+            <li>Statistics</li>
+            <li>Spanish Language</li>
+            <li>Calculus AB</li>
+        </div>
+
+        <div class="work-card-container">
+            <h2 style="width: 100%; color:#0B208B">Extracurriculars</h2>
+
+            <a class="work-card" href="https://students.pingry.org/robotics/" target="_blank">
+                <img src="Images/robotics.png" alt="Pingry Robotics" style="width:100%"/>
+                <div class="work-card-title">
+                    <h4><b>FTC & FRC Team Member</b></h4>
+                </div>
+            </a>
+
+            <a class="work-card" href="https://www.pingry.org/teaching-learning/upper-school/music" target="_blank">
+                <img src="Images/sax.jpg" alt="Pingry Jazz Band" style="width:100%"/>
+                <div class="work-card-title">
+                    <h4><b>Jazz Band & Concert Band</b></h4>
+                </div>
+            </a>
+
+            <a class="work-card" href="https://issuu.com/thepingryschool1861/docs/broken_record_june_pdf_final_2" target="_blank">
+                <img src="Images/pingry.jpg" alt="Broken Wreckord" style="width:100%"/>
+                <div class="work-card-title">
+                    <h4><b>Pingry Broken Wreckord - Satirical Newspaper - Staff Writer</b></h4>
+                </div>
+            </a>
+
+            <a class="work-card" href="https://www.pingry.org/about/our-facilities/big-blue-squash-programs" target="_blank">
+                <img src="Images/squash.png" alt="Pingry Squash" style="width:100%"/>
+                <div class="work-card-title">
+                    <h4><b>Varsity Team Member for 4 years</b></h4>
+                </div>
+            </a>
+
+
+        </div>
+
+    </div>
+
     <script src="script.js"></script>
 
 </body>
