--- a/yale.html
+++ b/yale.html
@@ -57,7 +57,48 @@
 
 
       </div>
-      <div class="main"><h2>Other stuff</h2></div>
+      <div class="work-card-container">
+          <h2 style="width: 100%; color:#0B208B">Extracurriculars & Awards</h2>
+
+          <a class="work-card" href="http://www.ncaa.org/governance/committees/division-i-student-athlete-advisory-committee" target="_blank">
+              <img src="Images/ncaa.jpg" alt="NCAA" style="width:100%"/>
+              <div class="work-card-title">
+                  <h4><b>NCAA Division I Student-Athlete Advisory Committee Member</b></h4>
+              </div>
+          </a>
+
+
+          <a class="work-card" href="http://www.ncaa.org/student-athletes/ncaa-student-athlete-advisory-committees-saacs" target="_blank">
+              <img src="Images/yaleath.png" alt="Yale Athletics" style="width:100%"/>
+              <div class="work-card-title">
+                  <h4><b>Student-Athlete Advisory Committee - Ivy League Representative</b></h4>
+              </div>
+          </a>
+
+
+          <a class="work-card" href="https://yale.communityforce.com/Funds/FundDetails.aspx?496F49596D593768464E3537506B6F754D5442315A7A784E6C7549344857434C68702B482B426A534D2B2B6C4E30666448764B3530575978535863654E766D6A32536133414359727439453D" target="_blank">
+              <img src="Images/lux.png" alt="Y" style="width:100%"/>
+              <div class="work-card-title">
+                  <h4><b>Swensen Scholars Award Recipient</b></h4>
+              </div>
+          </a>
+
+
+          <a class="work-card" href="https://www.codehavenyale.com/" target="_blank">
+              <img src="Images/codehaven.png" alt="Code Haven" style="width:100%"/>
+              <div class="work-card-title">
+                  <h4><b>Mentor</b></h4>
+              </div>
+          </a>
+
+          <a class="work-card" href="http://www.ncaa.org/student-athletes/ncaa-student-athlete-advisory-committees-saacs" target="_blank">
+              <img src="Images/yaleath.png" alt="Yale Athletics" style="width:100%"/>
+              <div class="work-card-title">
+                  <h4><b>Student-Athlete Advisory Committee - Secretary</b></h4>
+              </div>
+          </a>
+
+      </div>
     </div>
 
     <script src="script.js"></script>
