--- a/golf.html
+++ b/golf.html
@@ -9,45 +9,74 @@
 </head>
 
 <body>
+    <div class="row">
+      <div class="side">
+          <div>
+              <h3 class = "feature">
+                  Yale Women's Golf Team Captain 2020-2021
+              </h3>
+          </div>
 
-    <h1>Win scores</h1>
+          <h2>
+              Awards and Honors
+          </h2>
+          <li>Ivy League Top Ranked Player 19-20</li>
+          <li>Arnold Palmer Cup Watchlist Player</li>
+          <li>Ivy League Player of the Year 18-19</li>
+          <li>Ivy League Rookie of the Year 18-19</li>
+          <li>First Team All-Ivy 18-19</li>
 
-    <table>
-      <tr>
-        <th width=100px>Tournamenet Name</th>
-        <th>Course Name</th>
-        <th>Yards</th>
-        <th>Tour</th>
-        <th>Date</th>
-        <th>Round 1</th>
-        <th>Round 2</th>
-        <th>Round 3</th>
-        <th>Total</th>
-      </tr>
-      <tr>
-        <td>Tournamenet Name 1</td>
-        <td>Course Name 1</td>
-        <td>Yards 1</td>
-        <td>Tour 1</td>
-        <td>Date</td>
-        <td>Round 11</td>
-        <td>Round 12</td>
-        <td>Round 13</td>
-        <td>Total 1</td>
-      </tr>
-      <tr>
-        <td>Tournamenet Name 2</td>
-        <td>Course Name 2</td>
-        <td>Yards 2</td>
-        <td>Tour 2</td>
-        <td>Date</td>
-        <td>Round 21</td>
-        <td>Round 22</td>
-        <td>Round 23</td>
-        <td>Total 2</td>
-      </tr>
-    </table>
+      </div>
+
+      <div class="main">
+          <h1>Tournament Wins</h1>
+
+          <div class ="table-container">
+              <table id = "tableoo">
+                <tr>
+                  <th style='width:36%;'>Tournament Name</th>
+                  <th style='width:27.5%;'>Course Name</th>
+                  <th style='width:6%; text-align:center'>Yards</th>
+                  <th style='width:9%; text-align:center'>Tour</th>
+                  <th style='width:8%; text-align:center'>Date</th>
+                  <th style='width:2.5%; text-align:center'>1</th>
+                  <th style='width:2.5%; text-align:center'>2</th>
+                  <th style='width:2.5%; text-align:center'>3</th>
+                  <th style='width:6%; text-align:center'>Total</th>
+                </tr>
+
+                <!--<tr>
+                  <td>FAU Invitational</td>
+                  <td>Some course in Florida</td>
+                  <td style='text-align:center'>6666</td>
+                  <td style='text-align:center'>College</td>
+                  <td style='text-align:center'>02/XX/20</td>
+                  <td style='text-align:center'>72</td>
+                  <td style='text-align:center'>72</td>
+                  <td style='text-align:center'>72</td>
+                  <td style='text-align:center'>216</td>
+                </tr>
+                <tr>
+                  <td>FAU Invitational 2</td>
+                  <td>Some course in Florida</td>
+                  <td style='text-align:center'>6666</td>
+                  <td style='text-align:center'>College</td>
+                  <td style='text-align:center'>02/XX/20</td>
+                  <td style='text-align:center'>72</td>
+                  <td style='text-align:center'>72</td>
+                  <td style='text-align:center'>72</td>
+                  <td style='text-align:center'>216</td>
+              </tr>-->
+
+
+              </table>
+          </div>
+
+
+      </div>
+
 
     <script src="script.js"></script>
     <script src="golfresults.js"></script>
+
 </body>
