--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
           <h2>
               Me
           </h2>
-          <p>
-              Yale '22
-          </p>
-          <p>
-              Pingry '18
-          </p>
-
-          <p>
-              Instagram: @ami9g
-          </p>
           <img src="https://yalebulldogs.com/images/2019/10/22/Gianchandani.jpg" width="70%"/>
 
       </div>
@@ -34,9 +24,10 @@
       </div>
     </div>
 
-    <div class="footer">
+
+    <!-- <div class="footer">
       <p>Footer</p>
-    </div>
+    </div> -->
 
 <script src="script.js"></script>
 <script src="news.js"></script>
