--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-
-    <script src="script.js"></script>
+    <div class="main">
+    </div>
+    <script src="script.js"> </script>
 
 </body>
